sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:7: error: not found: value j
      var v=getValeur(i);j=i
                         ^AlgShellSort:8: error: not found: value j
      while (j>0 && getValeur(j-i)>v){
             ^AlgShellSort:8: error: not found: value j
      while (j>0 && getValeur(j-i)>v){
                              ^AlgShellSort:9: error: not found: value j
        setValeur(j,getValeur(j-ecart))
                  ^AlgShellSort:9: error: not found: value j
        setValeur(j,getValeur(j-ecart))
                              ^AlgShellSort:10: error: not found: value j
        j-=ecart
        ^AlgShellSort:12: error: not found: value j
      setValeur(j,v)
                ^